--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,12 +5,12 @@ COPY . .
 #RUN # --mount=type=cache,target=/usr/local/cargo/registry \
     # --mount=type=cache,target=/usr/src/app/target \
     #cargo build --release
-RUN cargo build --release
-RUN ls -alh
+RUN --mount=type=cache,target=/usr/local/cargo/registry \
+    cargo build --release
 
-FROM ubuntu:20.04
+FROM rust:1.68
 WORKDIR /usr/src/app
 COPY --from=builder /usr/src/app/target/release/backend ./backend
 # copy the configration
-RUN ls -alh
+## Do something
 CMD ["./backend"]
