--- a/infra/backend.yml
+++ b/infra/backend.yml
@@ -1,10 +1,31 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: backend-o2gether
+  name: o2gether-backend-depoly
+  namespace: default
 spec:
-  containers:
-    - name: backend-o2gether
-      image: o2gether-backend
-      ports: 
-      - containerPort: 8080
+  replicas: 1
+  selector:
+    matchLabels:
+      app: api
+  template:
+    metadata:
+      labels:
+        app: api
+    spec:
+      containers:
+      - name: api-server
+        image: docker.io/locally/o2gether-backend
+        imagePullPolicy: Never
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: api-entrypoint
+  namespace: default
+spec:
+  type: NodePort
+  selector:
+    app: api
+  ports:
+  - port: 8080
